src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>BST_BOOST_Opportunity_Product_ID__c</fullName>
        <displayFormat>OP-{00000}</displayFormat>
        <label>BOOST Opportunity Product ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BST_Opportunity_Product_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Opportunity Product P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BXCA_GL_Effective_Date__c</fullName>
        <label>Gain/Loss Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BXCA_GL_Quantity_eaches__c</fullName>
        <label>Quantity (eaches)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BXCA_GL_Timeframe__c</fullName>
        <label>Gain/Loss Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXCA_GL_Type__c</fullName>
        <label>Gain/Loss Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not relevant</fullName>
                </value>
                <value>
                    <fullName>Gain</fullName>
                </value>
                <value>
                    <fullName>Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Competitive_Data_Source__c</fullName>
        <label>Competitive Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Officially Published</fullName>
                </value>
                <value>
                    <fullName>Estimation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Competitor_Product_1_Price__c</fullName>
        <label>Competitor Product 1 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BXGO_Competitor_Product_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Competitor Product 1</label>
        <referenceTo>BXGO_Competitor_Product__c</referenceTo>
        <relationshipLabel>Opportunity Product (Competitor Product 1)</relationshipLabel>
        <relationshipName>Opportunity_Product_Competitor_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXGO_Competitor_Product_2_Price__c</fullName>
        <label>Competitor Product 2 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BXGO_Competitor_Product_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Competitor Product 2</label>
        <referenceTo>BXGO_Competitor_Product__c</referenceTo>
        <relationshipLabel>Opportunity Product (Competitor Product 2)</relationshipLabel>
        <relationshipName>Opportunity_Product_Competitor_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXGO_Competitor_Product_3_Price__c</fullName>
        <label>Competitor Product 3 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BXGO_Competitor_Product_3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Competitor Product 3</label>
        <referenceTo>BXGO_Competitor_Product__c</referenceTo>
        <relationshipLabel>Opportunity Product (Competitor Product 3)</relationshipLabel>
        <relationshipName>Opportunity_Product_Competitor_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXGO_Distributor_Price__c</fullName>
        <inlineHelpText>Price offered by the Distributor to the Customer.</inlineHelpText>
        <label>Distributor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BXGO_Final_Price__c</fullName>
        <formula>UnitPrice * (1 - Discount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BXGO_Franchise_MGP_weighted__c</fullName>
        <label>Franchise MGP Gap weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BXGO_MGP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MGP</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BXGO_Price_Level__c</fullName>
        <label>Price Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BXGO_Price_Level_indicator__c</fullName>
        <formula>IMAGE(
CASE( BXGO_Price_Level__c,
0, &quot;/img/samples/light_red.gif&quot;,
0.5, &quot;/img/samples/light_yellow.gif&quot;,
&quot;/img/samples/light_green.gif&quot;
),
&quot;Measures sales price against price guidance&quot; )</formula>
        <label>Price Level indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BXGO_Total_Quantity__c</fullName>
        <inlineHelpText>Total Quantity within the Opportunity.</inlineHelpText>
        <label>Total Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BXGO_Volume_below_Floor__c</fullName>
        <label>Volume below Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>